--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
   </parent>
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>material-theme</artifactId>
-  <version>0.4.1-SNAPSHOT</version>
+  <version>0.4.0</version>
   <packaging>hpi</packaging>
   <properties>
-    <revision>0.4.0</revision>
+    <revision>0.4.1</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.289.1</jenkins.version>
     <java.level>8</java.level>
